--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
+    <script src="JS/app.js"></script>
+    <script src="JS/mainCtrl.js"></script>
 </body>
 </html>
