--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body ng-controller="mainCtrl">
-    <h1>Woo</h1>
+    <h1>My Friends</h1>
 
 
 
