--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body ng-controller="mainCtrl">
     <h1>My Friends</h1>
+        <div ng-repeat="friend in friends">
+            <p>{{ friend }}</p>
+        </div>
 
 
 
