Adding a form and making it pretty

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
         <div ng-repeat="friend in friends">
             <p>{{ friend }}</p>
         </div>
+    
+    <h2>Add a Friend</h2>
+        <form>
+            Friend's' Name:<br>
+            <input type="text" name="friendname"><br>
+        </form>
 
 
 
