Figuring out the push name

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         </div>
     
     <h2>Add a Friend</h2>
-        <form>
+        <form ng-app="addFriend">
             Friend's' Name:<br>
             <input type="text" name="friendname"><br>
         </form>
+        <button ng-click="addFriend">Add Friend</button>
 
 
 
