--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
         </div>
     
     <h2>Add a Friend</h2>
-        <form ng-app="addFriend">
-            Friend's' Name:<br>
-            <input type="text" name="friendname"><br>
-        </form>
-        <button ng-click="addFriend">Add Friend</button>
+        <input type="text" name="friendname" ng-model="newName"><br>
+        <button ng-click='addFriend(newName)'>Add Friend</button>
 
 
 
