--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <h2>Add a Friend</h2>
         <input type="text" name="friendname" ng-model="newName"><br>
-        <button ng-click='addFriend(newName)'>Add Friend</button>
+        <button ng-click='addFriend()'>Add Friend</button>
 
 
 
